--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "aws-sdk": "^2.1692.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.471.0",
     "mongodb": "^6.15.0",
     "motion": "^11.17.0",
     "multer": "^1.4.5-lts.2",
     "next": "15.1.4",
+    "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^2.6.0",
