--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-image-lightbox": "^5.1.4",
+    "react-modal": "^3.16.3",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2"
